--- a/danus.html
+++ b/danus.html
@@ -16,7 +16,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Mulish&family=Snippet&display=swap" rel="stylesheet" />
-    <!-- akhir font -->
 
     <title>Atma Asta</title>
   </head>
@@ -35,7 +34,7 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-link" href="https://shopee.co.id/atma.asta">Marketplace</a>
             <a class="nav-link" href="ticket.html">Ticket</a>
-            <a class="nav-link active" href="live.html">Livestream</a>
+            <a class="nav-link" href="live.html">Livestream</a>
             <a class="nav-link" href="lineup.html">Lineup</a>
             <a class="nav-link" href="history.html">History</a>
             <a class="nav-link" href="faq.html">FAQ</a>
@@ -45,28 +44,72 @@
     </nav>
     <!-- akhir navbar -->
 
-    <!-- grid live -->
-    <div class="container grid-live pt-4">
-      <div class="row g-3 justify-content-center align-items-center">
-        <div class="col-sm-12 col-lg-8">
-          <!-- embed video -->
-          <div class="ratio ratio-16x9 border border-white border-5">
-            <iframe src="https://www.youtube.com/embed/XvCS04RayGg" title="YouTube video" allowfullscreen></iframe>
+    <!-- grid history -->
+    <div class="container grid-history">
+      <div class="row g-3 py-4">
+        <div class="col-sm-12 col-md-4 col-lg-3">
+          <div class="card">
+            <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
+            <div class="card-body tmst" style="background-image: url(img/tmst1.png)">
+              <h5 class="card-title">Atma Asta 2016</h5>
+              <p class="card-text">See More</p>
+            </div>
           </div>
-          <!-- akhir embed video -->
+          <a href="">
+            <img class="py-4" src="img/tulisan-bandung-temp.svg" alt="" width="100%" />
+          </a>
         </div>
-        <div class="col-sm-12 col-lg-4 card bg-transparent text-center live-text border-0">
-          <div class="card-body">
-            <h5 class="card-title">Atma Asta 2021</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Etherma</h6>
-            <p class="card-text p-card-live">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="card-link">watch on youtube</a>
+        <div class="col-sm-12 col-md-4 col-lg-3">
+          <div class="card">
+            <!-- embed video atma 2018-->
+            <div class="ratio ratio-16x9">
+              <iframe class="history-video" src="https://www.youtube.com/embed/XvCS04RayGg" title="YouTube video" allowfullscreen></iframe>
+            </div>
+            <!-- akhir embed video -->
+            <div class="card-body tmst" style="background-image: url(img/tmst2.png)">
+              <h5 class="card-title">Atma Asta 2018</h5>
+              <p class="card-text">See More</p>
+            </div>
           </div>
+          <a href="">
+            <img class="py-4" src="img/tulisan-hifestus2.svg" alt="" width="100%" />
+          </a>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-3">
+          <div class="card">
+            <!-- embed video atma 2019-->
+            <div class="ratio ratio-16x9">
+              <iframe class="history-video" src="https://www.youtube.com/embed/59SnWcF7zW8" title="YouTube video" allowfullscreen></iframe>
+            </div>
+            <!-- akhir embed video -->
+            <div class="card-body tmst" style="background-image: url(img/tmst3.png)">
+              <h5 class="card-title">Atma Asta 2019</h5>
+              <p class="card-text">See More</p>
+            </div>
+          </div>
+          <a href="">
+            <img class="py-4" src="img/tulisan-ratetra.svg" alt="" width="100%" />
+          </a>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-3">
+          <div class="card">
+            <!-- embed video atma 2020-->
+            <div class="ratio ratio-16x9">
+              <iframe class="history-video" src="https://www.youtube.com/embed/DQ99tmlGXI4" title="YouTube video" allowfullscreen></iframe>
+            </div>
+            <!-- akhir embed video -->
+            <div class="card-body tmst" style="background-image: url(img/tmst4.png)">
+              <h5 class="card-title">Atma Asta 2020</h5>
+              <p class="card-text">See More</p>
+            </div>
+          </div>
+          <a href="">
+            <img class="py-4" src="img/tulisan-rhemura.svg" alt="" width="100%" />
+          </a>
         </div>
       </div>
     </div>
-
-    <!-- akhir live -->
+    <!-- akhir grid history -->
 
     <!-- footer -->
     <footer class="text-center position-absolute bottom-0 start-50 translate-middle-x">
@@ -80,7 +123,6 @@
         <p>©2021. Atma Asta. All Rights Reserved.</p>
       </div>
     </footer>
-
     <!-- akhir footer -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script src="script.js"></script>
