--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
           <img class="img-fluid" src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" alt="" />
         </div>
         <div class="carousel-item">
-          <div class="overlay-image" style="background-image: url(img/pien-muller-Fh-Q-xfdh_o-unsplash.jpg)"></div>
+          <img class="img-fluid" src="img/pien-muller-Fh-Q-xfdh_o-unsplash.jpg" alt="" />
+          <!-- <div class="overlay-image" style="background-image: url(img/pien-muller-Fh-Q-xfdh_o-unsplash.jpg)"></div> -->
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
