--- a/history.html
+++ b/history.html
@@ -54,14 +54,12 @@
               <iframe class="history-video" src="https://www.youtube.com/embed/lVeYGpdW9LM" title="YouTube video" allowfullscreen></iframe>
             </div>
             <!-- akhir embed video -->
-            <div class="card-body tmst" style="background-image: url(img/tmst1.png)">
-              <h5 class="card-title">Atma Asta 2016</h5>
-              <p class="card-text">See More</p>
+            <div class="card-body tmst text-center" style="background-color: rgb(53, 53, 53)">
+              <a href="">
+                <img class="py-4" src="img/tulisan-bandung-temp.svg" alt="" width="100%" />
+              </a>
             </div>
           </div>
-          <a href="">
-            <img class="py-4" src="img/tulisan-bandung-temp.svg" alt="" width="100%" />
-          </a>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-3">
           <div class="card">
@@ -70,14 +68,12 @@
               <iframe class="history-video" src="https://www.youtube.com/embed/XvCS04RayGg" title="YouTube video" allowfullscreen></iframe>
             </div>
             <!-- akhir embed video -->
-            <div class="card-body tmst" style="background-image: url(img/tmst2.png)">
-              <h5 class="card-title">Atma Asta 2018</h5>
-              <p class="card-text">See More</p>
+            <div class="card-body tmst" style="background-color: rgb(53, 53, 53)">
+              <a href="">
+                <img class="py-4" src="img/tulisan-hifestus2.svg" alt="" width="100%" />
+              </a>
             </div>
           </div>
-          <a href="">
-            <img class="py-4" src="img/tulisan-hifestus2.svg" alt="" width="100%" />
-          </a>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-3">
           <div class="card">
@@ -86,14 +82,12 @@
               <iframe class="history-video" src="https://www.youtube.com/embed/59SnWcF7zW8" title="YouTube video" allowfullscreen></iframe>
             </div>
             <!-- akhir embed video -->
-            <div class="card-body tmst" style="background-image: url(img/tmst3.png)">
-              <h5 class="card-title">Atma Asta 2019</h5>
-              <p class="card-text">See More</p>
+            <div class="card-body tmst" style="background-color: rgb(53, 53, 53)">
+              <a href="">
+                <img class="py-4" src="img/tulisan-ratetra.svg" alt="" width="100%" />
+              </a>
             </div>
           </div>
-          <a href="">
-            <img class="py-4" src="img/tulisan-ratetra.svg" alt="" width="100%" />
-          </a>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-3">
           <div class="card">
@@ -102,14 +96,12 @@
               <iframe class="history-video" src="https://www.youtube.com/embed/DQ99tmlGXI4" title="YouTube video" allowfullscreen></iframe>
             </div>
             <!-- akhir embed video -->
-            <div class="card-body tmst" style="background-image: url(img/tmst4.png)">
-              <h5 class="card-title">Atma Asta 2020</h5>
-              <p class="card-text">See More</p>
+            <div class="card-body tmst" style="background-color: rgb(53, 53, 53)">
+              <a href="">
+                <img class="py-4" src="img/tulisan-rhemura.svg" alt="" width="100%" />
+              </a>
             </div>
           </div>
-          <a href="">
-            <img class="py-4" src="img/tulisan-rhemura.svg" alt="" width="100%" />
-          </a>
         </div>
       </div>
     </div>
