history animation & footer direct

--- a/faq.html
+++ b/faq.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand align-midle" href="index.html">
-          <img src="img/logo.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
+          <img src="img/stiker-coklat.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
           <img src="img/nav-atma.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -104,9 +104,9 @@
       <div class="container footer-content d-flex flex-column align-items-center justify-content-center" style="height: 100%">
         <h5>FOLLOW US</h5>
         <div class="icons mx-auto d-flex flex-inline justify-content-evenly">
-          <a href="#"><i class="fab fa-instagram-square"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-tiktok"></i></a>
+          <a href="https://www.instagram.com/atma.asta" target="_blank"><i class="fab fa-instagram-square"></i></a>
+          <a href="https://www.youtube.com/channel/UCAzW7UFyXe5EG_ehdQXt3fA" target="_blank"><i class="fab fa-youtube"></i></a>
+          <a href="https://vt.tiktok.com/ZSJb6g35o/" target="_blank"><i class="fab fa-tiktok"></i></a>
         </div>
         <p>©2021. Atma Asta. All Rights Reserved.</p>
       </div>
