--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand align-midle" href="index.html">
-          <img src="img/logo.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
+          <img src="img/stiker-coklat.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
           <img src="img/nav-atma.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
