--- a/sponsor.html
+++ b/sponsor.html
@@ -37,68 +37,111 @@
             <a class="nav-link" href="live.html">Livestream</a>
             <a class="nav-link" href="lineup.html">Lineup</a>
             <a class="nav-link" href="history.html">History</a>
-            <a class="nav-link active" href="faq.html">FAQ</a>
-            <a class="nav-link" href="sponsor.html">Sponsor</a>
+            <a class="nav-link" href="faq.html">FAQ</a>
+            <a class="nav-link active" href="sponsor.html">Sponsor</a>
           </div>
         </div>
       </div>
     </nav>
     <!-- akhir navbar -->
 
-    <!-- grid faq -->
     <div class="container grid-faq">
-      <div class="row g-2">
-        <div class="col-sm-12 col-md-6 col-lg-4">
+      <!-- grid sponsor -->
+      <h2 class="sponsor-title text-center">SPONSOR</h2>
+      <div class="row row-cols-lg-5 g-2 justify-content-center">
+        <div class="col-sm-6 col-md-4 col-lg text-center">
           <div class="card p-3" style="background-color: #ffd596">
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg text-center">
           <div class="card p-3" style="background-color: #f4ffb1">
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg text-center">
           <div class="card p-3" style="background-color: #9edda9">
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg text-center">
           <div class="card p-3" style="background-color: #9edda9">
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg text-center">
           <div class="card p-3" style="background-color: #ffd596">
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-6 col-md-4 col-lg text-center">
           <div class="card p-3" style="background-color: #f4ffb1">
             <div class="card-body">
               <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
             </div>
           </div>
         </div>
       </div>
+      <!-- akhirgrid sponsor -->
+
+      <!-- grid media partner -->
+      <h2 class="sponsor-title text-center mt-5">MEDIA PARTNER</h2>
+      <div class="row row-cols-lg-5 g-2 justify-content-center">
+        <div class="col-sm-6 col-md-4 col-lg text-center">
+          <div class="card p-3" style="background-color: #ffd596">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg text-center">
+          <div class="card p-3" style="background-color: #f4ffb1">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg text-center">
+          <div class="card p-3" style="background-color: #9edda9">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg text-center">
+          <div class="card p-3" style="background-color: #9edda9">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg text-center">
+          <div class="card p-3" style="background-color: #ffd596">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 col-lg text-center">
+          <div class="card p-3" style="background-color: #f4ffb1">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- akhir grid media partner -->
     </div>
-    <!-- akhir grid history -->
 
     <!-- footer -->
     <footer class="text-center position-absolute bottom-0 start-50 translate-middle-x">
