--- a/danus.html
+++ b/danus.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand align-midle" href="index.html">
-          <img src="img/logo.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
+          <img src="img/stiker-coklat.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
           <img src="img/nav-atma.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,12 +32,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="https://shopee.co.id/atma.asta">Marketplace</a>
+            <a class="nav-link active" href="danus.html">Marketplace</a>
             <a class="nav-link" href="ticket.html">Ticket</a>
             <a class="nav-link" href="live.html">Livestream</a>
             <a class="nav-link" href="lineup.html">Lineup</a>
             <a class="nav-link" href="history.html">History</a>
             <a class="nav-link" href="faq.html">FAQ</a>
+            <a class="nav-link" href="sponsor.html">Sponsor</a>
           </div>
         </div>
       </div>
@@ -47,65 +48,59 @@
     <!-- grid history -->
     <div class="container grid-history">
       <div class="row g-3 py-4">
-        <div class="col-sm-12 col-md-4 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card">
             <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
-            <div class="card-body tmst" style="background-image: url(img/tmst1.png)">
+            <div class="card-body tmst" style="background-color: #ffd596">
               <h5 class="card-title">Atma Asta 2016</h5>
               <p class="card-text">See More</p>
             </div>
           </div>
-          <a href="">
-            <img class="py-4" src="img/tulisan-bandung-temp.svg" alt="" width="100%" />
-          </a>
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card">
-            <!-- embed video atma 2018-->
-            <div class="ratio ratio-16x9">
-              <iframe class="history-video" src="https://www.youtube.com/embed/XvCS04RayGg" title="YouTube video" allowfullscreen></iframe>
-            </div>
-            <!-- akhir embed video -->
-            <div class="card-body tmst" style="background-image: url(img/tmst2.png)">
+            <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
+            <div class="card-body tmst" style="background-color: #9edda9">
               <h5 class="card-title">Atma Asta 2018</h5>
               <p class="card-text">See More</p>
             </div>
           </div>
-          <a href="">
-            <img class="py-4" src="img/tulisan-hifestus2.svg" alt="" width="100%" />
-          </a>
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card">
-            <!-- embed video atma 2019-->
-            <div class="ratio ratio-16x9">
-              <iframe class="history-video" src="https://www.youtube.com/embed/59SnWcF7zW8" title="YouTube video" allowfullscreen></iframe>
-            </div>
-            <!-- akhir embed video -->
-            <div class="card-body tmst" style="background-image: url(img/tmst3.png)">
+            <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
+            <div class="card-body tmst" style="background-color: #f4ffb1">
               <h5 class="card-title">Atma Asta 2019</h5>
               <p class="card-text">See More</p>
             </div>
           </div>
-          <a href="">
-            <img class="py-4" src="img/tulisan-ratetra.svg" alt="" width="100%" />
-          </a>
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card">
-            <!-- embed video atma 2020-->
-            <div class="ratio ratio-16x9">
-              <iframe class="history-video" src="https://www.youtube.com/embed/DQ99tmlGXI4" title="YouTube video" allowfullscreen></iframe>
-            </div>
-            <!-- akhir embed video -->
-            <div class="card-body tmst" style="background-image: url(img/tmst4.png)">
+            <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
+            <div class="card-body tmst" style="background-color: #ffd596">
               <h5 class="card-title">Atma Asta 2020</h5>
               <p class="card-text">See More</p>
             </div>
           </div>
-          <a href="">
-            <img class="py-4" src="img/tulisan-rhemura.svg" alt="" width="100%" />
-          </a>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card">
+            <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
+            <div class="card-body tmst" style="background-color: #9edda9">
+              <h5 class="card-title">Atma Asta 2020</h5>
+              <p class="card-text">See More</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="card">
+            <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
+            <div class="card-body tmst" style="background-color: #f4ffb1">
+              <h5 class="card-title">Atma Asta 2020</h5>
+              <p class="card-text">See More</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
