--- a/live.html
+++ b/live.html
@@ -33,12 +33,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="https://shopee.co.id/atma.asta">Marketplace</a>
+            <a class="nav-link" href="danus.html">Marketplace</a>
             <a class="nav-link" href="ticket.html">Ticket</a>
             <a class="nav-link active" href="live.html">Livestream</a>
             <a class="nav-link" href="lineup.html">Lineup</a>
             <a class="nav-link" href="history.html">History</a>
             <a class="nav-link" href="faq.html">FAQ</a>
+            <a class="nav-link" href="sponsor.html">Sponsor</a>
           </div>
         </div>
       </div>
