--- a/ticket.html
+++ b/ticket.html
@@ -32,12 +32,28 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="https://shopee.co.id/atma.asta">Marketplace</a>
-            <a class="nav-link active" href="ticket.html">Ticket</a>
-            <a class="nav-link" href="live.html">Livestream</a>
-            <a class="nav-link" href="lineup.html">Lineup</a>
-            <a class="nav-link" href="history.html">History</a>
-            <a class="nav-link" href="faq.html">FAQ</a>
+            <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+              <div class="container-fluid">
+                <a class="navbar-brand align-midle" href="index.html">
+                  <img src="img/stiker-coklat.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
+                  <img src="img/nav-atma.svg" alt="" width="35" height="35" class="d-inline-block align-text-top" />
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                  <div class="navbar-nav ms-auto">
+                    <a class="nav-link" href="danus.html">Marketplace</a>
+                    <a class="nav-link active" href="ticket.html">Ticket</a>
+                    <a class="nav-link" href="live.html">Livestream</a>
+                    <a class="nav-link" href="lineup.html">Lineup</a>
+                    <a class="nav-link" href="history.html">History</a>
+                    <a class="nav-link" href="faq.html">FAQ</a>
+                    <a class="nav-link" href="sponsor.html">Sponsor</a>
+                  </div>
+                </div>
+              </div>
+            </nav>
           </div>
         </div>
       </div>
