--- a/danus.html
+++ b/danus.html
@@ -45,10 +45,10 @@
     </nav>
     <!-- akhir navbar -->
 
-    <!-- grid history -->
+    <!-- grid danus -->
     <div class="container grid-history">
       <div class="row g-3 py-4">
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
             <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
             <div class="card-body tmst" style="background-color: #ffd596">
@@ -57,7 +57,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
             <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
             <div class="card-body tmst" style="background-color: #9edda9">
@@ -66,7 +66,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
             <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
             <div class="card-body tmst" style="background-color: #f4ffb1">
@@ -75,7 +75,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
             <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
             <div class="card-body tmst" style="background-color: #ffd596">
@@ -84,7 +84,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
             <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
             <div class="card-body tmst" style="background-color: #9edda9">
@@ -93,7 +93,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
             <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
             <div class="card-body tmst" style="background-color: #f4ffb1">
@@ -104,7 +104,7 @@
         </div>
       </div>
     </div>
-    <!-- akhir grid history -->
+    <!-- akhir grid danus -->
 
     <!-- footer -->
     <footer class="text-center position-absolute bottom-0 start-50 translate-middle-x">
