--- a/index.html
+++ b/index.html
@@ -108,6 +108,57 @@
     </div>
     <!-- akhir slider -->
 
+    <!-- grid danus -->
+    <div class="container grid-history">
+      <div class="row g-3 py-4">
+        <div class="col-sm-10 col-md-4 col-lg-3">
+          <div class="card">
+            <div class="ratio ratio-16x9">
+              <iframe class="history-video" src="https://www.youtube.com/embed/XvCS04RayGg" title="YouTube video" allowfullscreen></iframe>
+            </div>
+            <div class="card-body tmst" style="background-color: #ffd596">
+              <h5 class="card-title">Konten youtube</h5>
+              <p class="card-text">See More</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-10 col-md-4 col-lg-3">
+          <div class="card">
+            <div class="ratio ratio-16x9">
+              <iframe class="history-video" src="https://www.youtube.com/embed/XvCS04RayGg" title="YouTube video" allowfullscreen></iframe>
+            </div>
+            <div class="card-body tmst" style="background-color: #9edda9">
+              <h5 class="card-title">Konten youtube</h5>
+              <p class="card-text">See More</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-10 col-md-4 col-lg-3">
+          <div class="card">
+            <div class="ratio ratio-16x9">
+              <iframe class="history-video" src="https://www.youtube.com/embed/XvCS04RayGg" title="YouTube video" allowfullscreen></iframe>
+            </div>
+            <div class="card-body tmst" style="background-color: #f4ffb1">
+              <h5 class="card-title">Konten youtube</h5>
+              <p class="card-text">See More</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-10 col-md-4 col-lg-3">
+          <div class="card">
+            <div class="ratio ratio-16x9">
+              <iframe class="history-video" src="https://www.youtube.com/embed/XvCS04RayGg" title="YouTube video" allowfullscreen></iframe>
+            </div>
+            <div class="card-body tmst" style="background-color: #ffd596">
+              <h5 class="card-title">Konten youtube</h5>
+              <p class="card-text">See More</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- akhir grid danus -->
+
     <!-- footer -->
     <footer class="text-center position-absolute bottom-0 start-50 translate-middle-x">
       <div class="container footer-content d-flex flex-column align-items-center justify-content-center" style="height: 100%">
