--- a/history.html
+++ b/history.html
@@ -52,7 +52,7 @@
       </div>
       <div class="row g-3 py-2 align-items-end">
         <div class="col-sm-12 col-md-6 col-lg-3">
-          <a class="history-logo" href="">
+          <a class="history-logo btn" href="" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <img class="py-4" src="img/tulisan-bandung-temp.svg" alt="" width="100%" />
           </a>
           <div class="card">
@@ -116,9 +116,39 @@
       </div>
     </footer>
     <!-- akhir footer -->
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">ATMA ASTA 2016</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body margin-left-20 margin-right-20">
+            <div class="col-md-5">
+              <div class="border-grad">
+                <img class="img-responsive" src="img/tmst2016.jpg" />
+              </div>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Lihat after movie</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script src="script.js"></script>
     <script>
+      var myModal = document.getElementById("myModal");
+      var myInput = document.getElementById("myInput");
+
+      myModal.addEventListener("shown.bs.modal", function () {
+        myInput.focus();
+      });
       navbarbg();
       navbarcollapse();
     </script>
