--- a/danus.html
+++ b/danus.html
@@ -50,7 +50,7 @@
       <div class="row g-3 py-4">
         <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
+            <img src="img/danus.jpg" class="card-img-top" alt="..." />
             <div class="card-body tmst" style="background-color: #ffd596">
               <h5 class="card-title">Atma Asta 2016</h5>
               <p class="card-text">See More</p>
@@ -59,7 +59,7 @@
         </div>
         <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
+            <img src="img/danus.jpg" class="card-img-top" alt="..." />
             <div class="card-body tmst" style="background-color: #9edda9">
               <h5 class="card-title">Atma Asta 2018</h5>
               <p class="card-text">See More</p>
@@ -68,7 +68,7 @@
         </div>
         <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
+            <img src="img/danus.jpg" class="card-img-top" alt="..." />
             <div class="card-body tmst" style="background-color: #f4ffb1">
               <h5 class="card-title">Atma Asta 2019</h5>
               <p class="card-text">See More</p>
@@ -77,7 +77,7 @@
         </div>
         <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
+            <img src="img/danus.jpg" class="card-img-top" alt="..." />
             <div class="card-body tmst" style="background-color: #ffd596">
               <h5 class="card-title">Atma Asta 2020</h5>
               <p class="card-text">See More</p>
@@ -86,7 +86,7 @@
         </div>
         <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
+            <img src="img/danus.jpg" class="card-img-top" alt="..." />
             <div class="card-body tmst" style="background-color: #9edda9">
               <h5 class="card-title">Atma Asta 2020</h5>
               <p class="card-text">See More</p>
@@ -95,7 +95,7 @@
         </div>
         <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/marc-olivier-paquin-2_RQhbu0ZDQ-unsplash.jpg" class="card-img-top" alt="..." />
+            <img src="img/danus.jpg" class="card-img-top" alt="..." />
             <div class="card-body tmst" style="background-color: #f4ffb1">
               <h5 class="card-title">Atma Asta 2020</h5>
               <p class="card-text">See More</p>
