--- a/history.html
+++ b/history.html
@@ -58,7 +58,7 @@
           <div class="card">
             <!-- embed video atma 2016-->
             <div class="ratio ratio-16x9">
-              <iframe class="history-video" src="https://www.youtube.com/embed/lVeYGpdW9LM" title="YouTube video" allowfullscreen></iframe>
+              <iframe class="history-video" src="https://www.youtube.com/embed/DQ99tmlGXI4" title="YouTube video" allowfullscreen></iframe>
             </div>
             <!-- akhir embed video -->
           </div>
@@ -94,7 +94,7 @@
           <div class="card">
             <!-- embed video atma 2020-->
             <div class="ratio ratio-16x9">
-              <iframe class="history-video" src="https://www.youtube.com/embed/DQ99tmlGXI4" title="YouTube video" allowfullscreen></iframe>
+              <iframe class="history-video" src="https://www.youtube.com/embed/cbBYCteYSBQ" title="YouTube video" allowfullscreen></iframe>
             </div>
             <!-- akhir embed video -->
           </div>
