--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link" href="danus.html">Marketplace</a>
+            <a class="nav-link" href="danus.html">Merchandise</a>
             <a class="nav-link" href="ticket.html">Ticket</a>
             <a class="nav-link" href="live.html">Livestream</a>
             <a class="nav-link" href="lineup.html">Lineup</a>
@@ -51,8 +51,8 @@
     <div class="video-background">
       <div class="video-wrap">
         <div id="video">
-          <video id="bgvid" autoplay loop muted playsinline>
-            <source src="video/video.mp4" type="video/mp4" />
+          <video id="bgvid" autoplay loop playsinline muted>
+            <source src="video/videocomp.mp4" type="video/mp4" />
           </video>
         </div>
       </div>
@@ -71,10 +71,7 @@
             <br />
           </div>
           <div class="col-sm-12 col-lg-4 about-text align-self-center">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat.
-            </p>
+            <p>Atma Asta is an annual music and arts festival organized by SMAN 8 Bandung. Comes from 2 sanskrit words, Atma and Asta. Atma means the soul humans and Asta means eight. Therefore Atma Asta means soul of eight.</p>
           </div>
         </div>
       </div>
@@ -108,10 +105,11 @@
     </div>
     <!-- akhir slider -->
 
-    <!-- grid danus -->
+    <!-- grid gallery -->
     <div class="container grid-history">
+      <h1 style="font-family: 'snippet', sans-serif" class="text-center">Gallery</h1>
       <div class="row g-3 py-4">
-        <div class="col-sm-10 col-md-4 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-3">
           <div class="card">
             <div class="ratio ratio-16x9">
               <iframe class="history-video" src="https://www.youtube.com/embed/XvCS04RayGg" title="YouTube video" allowfullscreen></iframe>
@@ -122,7 +120,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-10 col-md-4 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-3">
           <div class="card">
             <div class="ratio ratio-16x9">
               <iframe class="history-video" src="https://www.youtube.com/embed/XvCS04RayGg" title="YouTube video" allowfullscreen></iframe>
@@ -133,7 +131,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-10 col-md-4 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-3">
           <div class="card">
             <div class="ratio ratio-16x9">
               <iframe class="history-video" src="https://www.youtube.com/embed/XvCS04RayGg" title="YouTube video" allowfullscreen></iframe>
@@ -144,7 +142,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-10 col-md-4 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-3">
           <div class="card">
             <div class="ratio ratio-16x9">
               <iframe class="history-video" src="https://www.youtube.com/embed/XvCS04RayGg" title="YouTube video" allowfullscreen></iframe>
@@ -157,7 +155,7 @@
         </div>
       </div>
     </div>
-    <!-- akhir grid danus -->
+    <!-- akhir grid gallery -->
 
     <!-- footer -->
     <footer class="text-center position-absolute bottom-0 start-50 translate-middle-x">
