--- a/history.html
+++ b/history.html
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
-          <a class="history-logo" href="">
+          <a class="history-logo" href="" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <img class="py-4" src="img/tulisan-hifestus2.svg" alt="" width="100%" />
           </a>
           <div class="card">
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
-          <a class="history-logo" href="">
+          <a class="history-logo" href="" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <img class="py-4" src="img/tulisan-ratetra.svg" alt="" width="100%" />
           </a>
           <div class="card">
@@ -88,7 +88,7 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
-          <a class="history-logo" href="">
+          <a class="history-logo" href="" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <img class="py-4" src="img/tulisan-rhemura.svg" alt="" width="100%" />
           </a>
           <div class="card">
@@ -122,19 +122,15 @@
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">ATMA ASTA 2016</h5>
+            <h5 class="modal-title" id="exampleModalLabel">ATMA ASTA</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body margin-left-20 margin-right-20">
-            <div class="col-md-5">
-              <div class="border-grad">
-                <img class="img-responsive" src="img/tmst2016.jpg" />
-              </div>
-            </div>
+            <img width="100%" src="img/tmst2016.jpg" />
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Lihat after movie</button>
+            <button type="button" class="btn btn-primary">After Movie</button>
           </div>
         </div>
       </div>
