rubah video source

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="video-wrap">
         <div id="video">
           <video id="bgvid" autoplay loop muted playsinline>
-            <source src="video/video.mp4" type="video/mp4" />
+            <source src="video/videocomp.mp4" type="video/mp4" />
           </video>
         </div>
       </div>
@@ -79,7 +79,6 @@
         </div>
       </div>
     </section>
-
     <!-- akhir about atma -->
 
     <!-- slider -->
@@ -108,8 +107,11 @@
     </div>
     <!-- akhir slider -->
 
-    <!-- grid danus -->
+    <!-- grid gallery -->
     <div class="container grid-history">
+      <div class="row text-center">
+        <h1 style="font-family: 'snippet', sans-serif">Gallery</h1>
+      </div>
       <div class="row g-3 py-4">
         <div class="col-sm-10 col-md-4 col-lg-3">
           <div class="card">
@@ -176,7 +178,6 @@
     <script src="script.js"></script>
     <script>
       navbarbg();
-      navbarcollapse();
     </script>
   </body>
 </html>
