konten faq dan js modal

--- a/index.html
+++ b/index.html
@@ -106,13 +106,7 @@
 
     <!-- grid gallery -->
     <div class="container grid-history">
-      <<<<<<< HEAD
-      <div class="row text-center">
-        <h1 style="font-family: 'snippet', sans-serif">Gallery</h1>
-      </div>
-      =======
       <h1 style="font-family: 'snippet', sans-serif" class="text-center">Gallery</h1>
-      >>>>>>> 826bb1cd49899ba2e908b137c64d48d9c3029183
       <div class="row g-3 py-4">
         <div class="col-sm-12 col-md-6 col-lg-3">
           <div class="card">
@@ -179,6 +173,7 @@
     <script src="script.js"></script>
     <script>
       navbarbg();
+      navbarcollapse();
     </script>
   </body>
 </html>
