--- a/faq.html
+++ b/faq.html
@@ -50,49 +50,49 @@
       <div class="row g-2">
         <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card p-3" style="background-color: #ffd596">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <div class="card-body d-flex flex-column align-items-center justify-content-center">
+              <h5 class="card-title">PERFORM</h5>
+              <p class="card-text text-center">Atma Asta is an annual performing arts that is held by SMAN 8 Bandung</p>
             </div>
           </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card p-3" style="background-color: #f4ffb1">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <div class="card-body d-flex flex-column align-items-center justify-content-center">
+              <h5 class="card-title">COLLABORATION</h5>
+              <p class="card-text text-center">There's a special collaboration performance by all extracurricular in SMAN 8 Bandung</p>
             </div>
           </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card p-3" style="background-color: #9edda9">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <div class="card-body d-flex flex-column align-items-center justify-content-center">
+              <h5 class="card-title">ARTIST</h5>
+              <p class="card-text text-center">There are many performances from various great singers</p>
             </div>
           </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card p-3" style="background-color: #9edda9">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <div class="card-body d-flex flex-column align-items-center justify-content-center">
+              <h5 class="card-title">WEBSERIES</h5>
+              <p class="card-text text-center">Before Atma Asta will be held, there’s a webseries from Atma Asta starring and made by 8 senior highschool students themself</p>
             </div>
           </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card p-3" style="background-color: #ffd596">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <div class="card-body d-flex flex-column align-items-center justify-content-center">
+              <h5 class="card-title">THEME</h5>
+              <p class="card-text text-center">each year Atma Asta has a different theme, but the theme is still related to one another</p>
             </div>
           </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
           <div class="card p-3" style="background-color: #f4ffb1">
-            <div class="card-body">
-              <h5 class="card-title">Special title treatment</h5>
-              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <div class="card-body d-flex flex-column align-items-center justify-content-center">
+              <h5 class="card-title">MERCH</h5>
+              <p class="card-text text-center">every year, atma asta release various kinds of merch with designs that match the theme of atma asta that year</p>
             </div>
           </div>
         </div>
