--- a/history.html
+++ b/history.html
@@ -53,7 +53,7 @@
       <div class="row g-3 py-2 align-items-end">
         <div class="col-sm-12 col-md-6 col-lg-3">
           <a class="history-logo btn" href="" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <img class="py-4" src="img/tulisan-bandung-temp.svg" alt="" width="100%" />
+            <img class="logo2016 py-4" src="img/tulisan-bandung-temp.svg" alt="" width="100%" />
           </a>
           <div class="card">
             <!-- embed video atma 2016-->
@@ -65,7 +65,7 @@
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
           <a class="history-logo" href="" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <img class="py-4" src="img/tulisan-hifestus2.svg" alt="" width="100%" />
+            <img class="logo2018 py-4" src="img/tulisan-hifestus2.svg" alt="" width="100%" />
           </a>
           <div class="card">
             <!-- embed video atma 2018-->
@@ -77,7 +77,7 @@
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
           <a class="history-logo" href="" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <img class="py-4" src="img/tulisan-ratetra.svg" alt="" width="100%" />
+            <img class="logo2019 py-4" src="img/tulisan-ratetra.svg" alt="" width="100%" />
           </a>
           <div class="card">
             <!-- embed video atma 2019-->
@@ -89,7 +89,7 @@
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
           <a class="history-logo" href="" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <img class="py-4" src="img/tulisan-rhemura.svg" alt="" width="100%" />
+            <img class="logo2020 py-4" src="img/tulisan-rhemura.svg" alt="" width="100%" />
           </a>
           <div class="card">
             <!-- embed video atma 2020-->
@@ -126,7 +126,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body margin-left-20 margin-right-20">
-            <img width="100%" src="img/tmst2016.jpg" />
+            <img class="tmst" width="100%" src="" />
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -139,14 +139,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script src="script.js"></script>
     <script>
-      var myModal = document.getElementById("myModal");
-      var myInput = document.getElementById("myInput");
+      // var myModal = document.getElementById("myModal");
+      // var myInput = document.getElementById("myInput");
 
-      myModal.addEventListener("shown.bs.modal", function () {
-        myInput.focus();
-      });
+      // myModal.addEventListener("shown.bs.modal", function () {
+      //   myInput.focus();
+      // });
+
       navbarbg();
       navbarcollapse();
+      modal();
     </script>
   </body>
 </html>
