--- a/history.html
+++ b/history.html
@@ -53,7 +53,7 @@
       <div class="row g-3 py-2 align-items-end">
         <div class="col-sm-12 col-md-6 col-lg-3">
           <a class="history-logo btn" href="" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <img class="logo2016 py-4" src="img/tulisan-bandung-temp.svg" alt="" width="100%" />
+            <img class="logo2016 py-4" src="img/tulisan-bandung.svg" alt="" width="100%" />
           </a>
           <div class="card">
             <!-- embed video atma 2016-->
@@ -65,7 +65,7 @@
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
           <a class="history-logo" href="" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <img class="logo2018 py-4" src="img/tulisan-hifestus2.svg" alt="" width="100%" />
+            <img class="logo2018 py-4" src="img/tulisan-hifestus.svg" alt="" width="100%" />
           </a>
           <div class="card">
             <!-- embed video atma 2018-->
