--- a/history.html
+++ b/history.html
@@ -117,7 +117,7 @@
     </footer>
     <!-- akhir footer -->
 
-    <!-- Modal Item -->
+    <!-- Modal-->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
@@ -164,7 +164,7 @@
         </div>
       </div>
     </div>
-    <!-- Akhir Modal Item -->
+    <!-- Akhir Modal-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
     <script src="script.js"></script>
