--- a/history.html
+++ b/history.html
@@ -128,7 +128,7 @@
           </div>
 
           <!-- body modal -->
-          <div style="background: url(img/bg.svg) center top no-repeat">
+          <div class="rounded-bottom" style="background: url(img/bg.svg) center top no-repeat">
             <div class="modal-body margin-left-20 margin-right-20">
               <div class="row margin-bottom-30">
                 <div class="col-md-5">
