modal script (belum artist)

--- a/history.html
+++ b/history.html
@@ -119,30 +119,30 @@
 
     <!-- Modal-->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-lg">
+      <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
           <!-- header modal -->
-          <div class="modal-header border-0 d-flex align-items-start text-center" style="background-color: #ddcaaa">
-            <h2 class="align-midle"><strong>ATMA ASTA 2016</strong></h2>
+          <div class="modal-header border-0 d-flex text-center" style="background-color: #ddcaaa">
+            <h3 class="text-center"><strong>ATMA ASTA 2016</strong></h3>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
 
           <!-- body modal -->
           <div style="background: url(img/bg.svg) center top no-repeat">
-            <div class="modal-body margin-left-20 margin-right-20">
-              <div class="row margin-bottom-30">
-                <div class="col-md-5">
+            <div class="modal-body mb-2">
+              <div class="row g-4">
+                <div class="col-sm-12 col-md-5">
                   <div class="border-grad">
-                    <img class="img" src="img/tmst2016.jpg" width="100%" />
+                    <img class="" src="" width="100%" />
                   </div>
                 </div>
-                <div class="col-md-7">
+                <div class="col-sm-12 col-md-7">
                   <div>
                     <!-- details -->
                     <ul class="list-unstyled padding-top-10">
-                      <li><strong>Date :</strong> January 9, 2016</li>
-                      <li><strong>Venue :</strong> Sasana Budaya Ganesha, Bandung</li>
-                      <li><strong>Theme :</strong> Bandung</li>
+                      <li></li>
+                      <li></li>
+                      <li></li>
                     </ul>
                     <!-- /details -->
                     <!-- artist -->
