foto danus & script history text

--- a/danus.html
+++ b/danus.html
@@ -46,58 +46,95 @@
     <!-- akhir navbar -->
 
     <!-- grid danus -->
-    <div class="container grid-history">
+    <div class="container grid-danus">
       <div class="row g-3 py-4">
         <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/danus.jpg" class="card-img-top" alt="..." />
+            <img src="img/sticker.jpg" class="card-img-top img-fluid" alt="..." />
             <div class="card-body tmst" style="background-color: #ffd596">
-              <h5 class="card-title">Atma Asta 2016</h5>
+              <h5 class="card-title">Sticker Set</h5>
               <p class="card-text">See More</p>
             </div>
           </div>
         </div>
         <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/danus.jpg" class="card-img-top" alt="..." />
+            <img src="img/StikerLogo.JPG" class="card-img-top img-fluid" alt="..."/>
             <div class="card-body tmst" style="background-color: #9edda9">
-              <h5 class="card-title">Atma Asta 2018</h5>
+              <h5 class="card-title">Sticker Logo</h5>
               <p class="card-text">See More</p>
             </div>
           </div>
         </div>
         <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/danus.jpg" class="card-img-top" alt="..." />
+            <img src="img/Keychain.JPG" class="card-img-top img-fluid" alt="..."/>
             <div class="card-body tmst" style="background-color: #f4ffb1">
-              <h5 class="card-title">Atma Asta 2019</h5>
+              <h5 class="card-title">Keychain</h5>
               <p class="card-text">See More</p>
             </div>
           </div>
         </div>
         <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/danus.jpg" class="card-img-top" alt="..." />
+            <div id="carouselShirt" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="img-fluid card-img-top img-fluid" src="img/shirtbiru.JPG" alt="" />
+                </div>
+                <div class="carousel-item">
+                  <img class="img-fluid card-img-top img-fluid" src="img/shirthitam.JPG" alt="" />
+                </div>
+                <div class="carousel-item">
+                  <img class="img-fluid card-img-top img-fluid" src="img/shirtputih.JPG" alt="" />
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselShirt" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselShirt" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
             <div class="card-body tmst" style="background-color: #ffd596">
-              <h5 class="card-title">Atma Asta 2020</h5>
+              <h5 class="card-title">T-Shirt</h5>
               <p class="card-text">See More</p>
             </div>
           </div>
         </div>
         <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/danus.jpg" class="card-img-top" alt="..." />
+            <div id="carouselTotebag" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="img-fluid card-img-top img-fluid" src="img/totebagclose.JPG" alt="" />
+                </div>
+                <div class="carousel-item">
+                  <img class="img-fluid card-img-top img-fluid" src="img/totebagfar.JPG" alt="" />
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselTotebag" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselTotebag" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
             <div class="card-body tmst" style="background-color: #9edda9">
-              <h5 class="card-title">Atma Asta 2020</h5>
+              <h5 class="card-title">Totebag</h5>
               <p class="card-text">See More</p>
             </div>
           </div>
         </div>
         <div class="col-sm-10 col-md-4 col-lg-2">
           <div class="card">
-            <img src="img/danus.jpg" class="card-img-top" alt="..." />
+            <img src="img/notebook.JPG" class="card-img-top img-fluid" alt="..." />
             <div class="card-body tmst" style="background-color: #f4ffb1">
-              <h5 class="card-title">Atma Asta 2020</h5>
+              <h5 class="card-title">Notebook</h5>
               <p class="card-text">See More</p>
             </div>
           </div>
