--- a/history.html
+++ b/history.html
@@ -145,17 +145,13 @@
                       <li></li>
                     </ul>
                     <!-- /details -->
-                    <!-- artist -->
+                    <!-- history -->
                     <div class="margin-top-20">
-                      <div id="artists-text2">
-                        <a>artist 1</a>
-                        <a>artist 2</a>
-                        <a>artist 3</a>
-                        <a>artist 4</a>
-                        <a>artist 5</a>
+                      <div class="history-text">
+                        
                       </div>
                     </div>
-                    <!-- /Artists -->
+                    <!-- /history -->
                   </div>
                 </div>
               </div>
