--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="video-background">
       <div class="video-wrap">
         <div id="video">
-          <video id="bgvid" autoplay loop playsinline>
+          <video id="bgvid" autoplay loop playsinline muted>
             <source src="video/videocomp.mp4" type="video/mp4" />
           </video>
         </div>
